--- a/src/pages/services/dishwasher-repair.astro
+++ b/src/pages/services/dishwasher-repair.astro
@@ -30,7 +30,7 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <img
             src="/microwave-repair/page_header_photos.webp"
-            alt="Microwave repair"
+            alt="Dishwasher Repair"
             loading="lazy"
           />
         </div>
@@ -59,70 +59,69 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>MICROWAVE REPAIR</h2>
+              <h2>Dishwasher Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Microwave oven types and their repair needs</h2>
+              <h2>Dishwasher types and their repair needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Microwave Issues</h2>
+              <h2>Common Dishwasher Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Microwave Parts Explained</h2>
+              <h2>Dishwasher Parts Explained</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Microwave Replacement Parts Costs</h2>
+              <h2>Dishwasher Replacement Parts Cost</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Microwave Depending on the Brand</h2>
+              <h2>Cost to Repair a Dishwasher Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Microwave Repair Labor Costs</h2>
+              <h2>Dishwasher repair labor costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Dishwasher Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Microwave Repair</h2>
+              <h2>Ways to Save Money on Dishwasher Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
               <h2>
-                What is included in regular microwave maintenance and how it can
-                help prevent repairs
+                What is included in dishwasher maintenance and how it can help prevent repairs
               </h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to decide whether to repair of replace a microwave</h2>
+              <h2>How to decide whether to repair or replace a dishwasher</h2>
             </a>
           </div>
 
@@ -134,13 +133,13 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+              <h2>How Much Does It Cost to Repair a Dishwasher?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
+              <h2>Our Pricing Policy For The Dishwasher Repair And How We Work</h2>
             </a>
           </div>
 
@@ -617,15 +616,15 @@ import "css/service/style_services.css";
               <div class="content__page-hed-h">
                 <h2>Cost to Repair a Dishwasher Depending on the Brand</h2>
               </div>
-              <div class="content__page-hed-desc">
-                <p>
-                  The cost to repair a dishwasher can vary significantly depending on the brand, as different manufacturers use different parts and technologies. Here is a general overview of repair costs associated with some popular dishwasher brands:
-                </p>
-              </div>
+              <div class="content__page-hed-desc"></div>
             </div>
 
             <div class="content__page-full-desc">
               <div class="content__page-desc">
+                <p>
+                  The cost to repair a dishwasher can vary significantly depending on the brand, as different manufacturers use different parts and technologies. Here is a general overview of repair costs associated with some popular dishwasher brands:
+                </p>
+
                 <h3>Bosch:</h3>
                 <p>
                   Bosch dishwashers are known for their high quality and reliability, but their parts can be somewhat expensive. A service call for a Bosch dishwasher might start around <b>$100 to $150</b>, with typical repairs ranging from <b>$200 to $400</b>. More complex issues could cost upwards of<b> $600</b>, especially if major components like the motor or control board need replacing.
