--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -143,7 +143,8 @@ main {
     position: -webkit-sticky;
     position: sticky;
     top: 140px;
-    height: 580px;
+    /* height: 580px; */
+    height: 78vh;
     min-width: 215px;
     overflow-y: auto;
     scroll-behavior: smooth;
