--- a/src/pages/services/furnace-repair.astro
+++ b/src/pages/services/furnace-repair.astro
@@ -20,7 +20,7 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full .furnace-page-header-d-full">
+        <div class="page-header-d-full furnace-page-header-d-full">
           <div class="page-header-d">
             <h1><span class="animate-charcter">Furnace Repair</span></h1>
             <Contactbtn />
