--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -34,7 +34,7 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <img
             src="/washer-repair/washing-machines-page_header_photos.webp"
-            alt="Microwave repair"
+            alt="Whashing machine"
             loading="lazy"
           />
         </div>
