--- a/src/pages/services/oven-repair.astro
+++ b/src/pages/services/oven-repair.astro
@@ -62,69 +62,69 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Whashing machine Repair</h2>
+              <h2>Oven Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Types of washers and their repair needs</h2>
+              <h2>Oven Types and Their Repair Needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Washer Issues</h2>
+              <h2>Common Oven Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Washing machine parts explained</h2>
+              <h2>Oven Parts Explained</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Washing machine replacement parts costs</h2>
+              <h2>Oven Replacement Parts Cost</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to repair a washing machine depending on the brand</h2>
+              <h2>Cost to Repair an Oven Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Washing Machine Repair Labor Costs</h2>
+              <h2>Oven Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Washing machine repair cost - labor only, excluding parts</h2>
+              <h2>Oven Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Washer Repair</h2>
+              <h2>Ways to Save Money on Oven Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
               <h2>
-                What is included in Washing Machine maintenance and how it can help prevent repairs
+                What is Included in Oven Maintenance and How It Can Help Prevent Repairs
               </h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to decide whether to repair or replace a washing machine</h2>
+              <h2>How to Decide Whether to Repair or Replace an Oven</h2>
             </a>
           </div>
 
@@ -136,13 +136,13 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does It Cost to Repair a Washing Machine?</h2>
+              <h2>How Much Does It Cost to Repair an Oven?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For The Washing Machine Repair and How We Work</h2>
+              <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
             </a>
           </div>
 
