--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -312,7 +312,7 @@ const makeTitle = title
       h3 {
         margin-top: 25px;
         font-weight: 800;
-        font-size: 22px !important;
+        font-size: 22px;
       }
       .anchor {
         color: #0f77cc;
