--- a/src/pages/services/freezer-repair.astro
+++ b/src/pages/services/freezer-repair.astro
@@ -59,88 +59,87 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>MICROWAVE REPAIR</h2>
+              <h2>Freezer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Microwave oven types and their repair needs</h2>
+              <h2>Freezers Types and Their Repair Needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Microwave Issues</h2>
+              <h2>Common Freezer Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Microwave Parts Explained</h2>
+              <h2>Freezer Parts Explained</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Microwave Replacement Parts Costs</h2>
+              <h2>Freezer Replacement Parts Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Microwave Depending on the Brand</h2>
+              <h2>Cost to Repair a Freezer Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Microwave Repair Labor Costs</h2>
+              <h2>Freezer Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Freezer Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Microwave Repair</h2>
+              <h2>Ways to Save Money on Freezer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
               <h2>
-                What is included in regular microwave maintenance and how it can
-                help prevent repairs
+                What is included in Freezer Maintenance and How it Can Help Preven Repairs
               </h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to decide whether to repair of replace a microwave</h2>
+              <h2>How to decide whether to repair or replace a freezer</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-12">
-              <h2>Same Day Appliance Repair at your service</h2>
+              <h2>Same Day Appliance Repair at Your Service</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+              <h2>How Much Does It Cost to Repair a Freezer?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
+              <h2>Our Pricing Policy For Freezer Repair and How We Work</h2>
             </a>
           </div>
 
